--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "baseUrl": "/home/fransm/Dev/public/xv-landing",
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "src/*"
